# so101_ros2

./: .gitignore  LICENSE  README.md
so101_bringup/: CMakeLists.txt  README.md  package.xml
so101_bringup/launch/: so101_gazebo_moveit.launch.py
so101_bringup/scripts/: so101_gazebo_and_moveit.sh  so101_gazebo_launch.sh
so101_description/: CMakeLists.txt  README.md  package.xml
so101_description/launch/: robot_state_publisher.launch.py
so101_description/rviz/: robot_arm_description.rviz
so101_description/urdf/: robot.urdf  so101_robot.urdf.xacro
so101_description/urdf/control/: gazebo_sim_ros2_control.urdf.xacro  so101_ros2_control.urdf.xacro
so101_description/urdf/robots/: so101.urdf.xacro
so101_description/urdf/sensors/: intel_rgbd_cam_d435.urdf.xacro
so101_gazebo/: CMakeLists.txt  README.md  package.xml
so101_gazebo/config/: ros_gz_bridge.yaml
so101_gazebo/launch/: so101.gazebo.launch.py
so101_gazebo/worlds/: pick_and_place.world
so101_moveit_config/: .setup_assistant  CMakeLists.txt  README.md  package.xml
so101_moveit_config/config/so101/: initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  pilz_cartesian_limits.yaml  ros2_controllers.yaml  ros2_controllers_template.yaml  so101.srdf
so101_moveit_config/launch/: load_ros2_controllers.launch.py  move_group.launch.py
so101_moveit_config/rviz/: move_group.rviz
so101_ros2/: CMakeLists.txt  README.md  package.xml
so101_system_tests/: CMakeLists.txt  README.md  package.xml
so101_teleop_bridge/: README.md  package.xml  setup.cfg  setup.py
so101_teleop_bridge/scripts/: leader_bridge
so101_teleop_bridge/so101_teleop_bridge/: leader_bridge.py
