<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>so101_ros2</name>
  <version>0.0.0</version>
  <description>SO-ARM101 simulation in ROS2</description>
  <maintainer email="adoojonathan412@gmail.com">adoodevv</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>so101_bringup</exec_depend>
  <exec_depend>so101_description</exec_depend>
  <exec_depend>so101_gazebo</exec_depend>
  <exec_depend>so101_moveit_config</exec_depend>
  <exec_depend>so101_system_tests</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
